--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="main-wraper">
-        <img src="src/logo.png" class="logo">
+        <img src="img/logo.png" class="logo">
 
         <nav class="nav-menu">
           <ul>
@@ -56,7 +56,7 @@
               </a>
             </div>
           </div>
-          <img src="src/mobile-mockup.png" filter="none" />
+          <img src="img/mobile-mockup.png" filter="none" />
         </div>
       </section>
       <section class="services" id="services">
@@ -114,7 +114,7 @@
                         <li>All the Lorem Ipsum generators on the Internet tendto repeat predefined.</li> 
                     </ul>
                 <div class="mobileimage">
-                <img src="src/work-mobile.png">
+                <img src="img/work-mobile.png">
             </div>
             </div>
             </div>
@@ -126,7 +126,7 @@
             <div class="team-container">
                 <div class="team-container__item">
                     <figure>
-                        <img src="src/member-1-255x260.jpg">
+                        <img src="img/member-1-255x260.jpg">
                         <figcaption>
                             <a href="#" class="figure-link">
                                 <i class="fab fa-facebook-f"></i>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="team-container__item">
                     <figure>
-                        <img src="src/member-3-255x260.jpg">
+                        <img src="img/member-3-255x260.jpg">
                         <figcaption>
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="team-container__item">
                     <figure>
-                        <img src="src/member-4-255x260.jpg">
+                        <img src="img/member-4-255x260.jpg">
                         <figcaption>
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -186,7 +186,7 @@
                 </div>
                 <div class="team-container__item">
                     <figure>
-                        <img src="src/member-1-255x260.jpg">
+                        <img src="img/member-1-255x260.jpg">
                         <figcaption>
                             <a href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -273,7 +273,7 @@
 </main>
 <footer>
     <div class="main-wraper">
-        <img src="src/footer-logo.png">
+        <img src="img/footer-logo.png">
         <div class="social-cont">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
