--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     ></script>
   </head>
   <body>
-    <header>
+    <header id="home-link">
       <div class="main-wraper">
         <img src="img/logo.png" class="logo">
 
         <nav class="nav-menu">
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="#services">Sevices</a></li>
-            <li><a href="#howworks">How It Works</a></li>
-            <li><a href="">Team</a></li>
-            <li><a href="">Our Blog</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#home-link">Home</a></li>
+            <li><a href="#services-link">Services</a></li>
+            <li><a href="#works-link">How It Works</a></li>
+            <li><a href="#team-link">Team</a></li>
+            <li><a href="#blog-link">Our Blog</a></li>
+            <li><a href="#contact-link">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -59,7 +59,7 @@
           <img src="img/mobile-mockup.png" filter="none" />
         </div>
       </section>
-      <section class="services" id="services">
+      <section class="services" id="services-link">
         <div class="main-wraper">
           <h2><span>Services</span></h2>
           <div class="wraper-services">
